2011-02-16  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, qt and mac rebaseline of test after r78690.

        * media/controls-without-preload-expected.txt:
        * platform/qt/media/controls-without-preload-expected.txt:

2011-02-16  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, rebaseline test after r78690.

        * media/controls-without-preload-expected.txt:

2011-02-16  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r78655.
        http://trac.webkit.org/changeset/78655
        https://bugs.webkit.org/show_bug.cgi?id=54543

        Causes too many test failures in chromium (Requested by
        mnaganov on #webkit).

        * storage/indexeddb/exception-in-event-aborts-expected.txt: Removed.
        * storage/indexeddb/exception-in-event-aborts.html: Removed.
        * storage/indexeddb/queued-commands-expected.txt:
        * storage/indexeddb/queued-commands.html:
        * storage/indexeddb/request-event-propagation-expected.txt:
        * storage/indexeddb/request-event-propagation.html:
        * storage/indexeddb/resources/shared.js:
        (unexpectedErrorCallback):
        * storage/indexeddb/transaction-event-propagation-expected.txt:
        * storage/indexeddb/transaction-event-propagation.html:

2011-02-16  Philippe Normand  <pnormand@igalia.com>

        Unreviewed rebaseline GTK media test result.

        * platform/gtk/media/video-controls-rendering-expected.txt:

2011-02-15  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] media/controls-without-preload.html is flacky on 32-bits Debug
        https://bugs.webkit.org/show_bug.cgi?id=50518

        Refactored 2 media tests to avoid use of setTimeout and possible
        flakyness.

        * media/controls-without-preload.html:
        * media/video-display-toggle.html:
        * platform/gtk/Skipped:
        * platform/gtk/media/controls-without-preload-expected.txt:
