@@ -1,3 +1,13 @@
+2011-02-16  Ilya Tikhonovsky  <loislo@chromium.org>
+
+        Reviewed by Yury Semikhatsky.
+
+        Web Inspector: chromium: DRT is crashing on the tests in inspector-enabled folder.
+        https://bugs.webkit.org/show_bug.cgi?id=54548
+
+        * DumpRenderTree/chromium/TestShell.cpp:
+        (TestShell::runFileTest):
+
 2011-02-16  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r77898.
